<resources>
    <string name="yts_tagline">Welcome to the official YTS website.
        Here you will be able to browse and download
        YIFY movies in excellent 720p, 1080p and 3D quality,
        all at the smallest file size.
        Only here: YTS Movies Torrents. </string>
    <string name="app_name">YTS</string>
    <string name="retry_string">Oops! Connection Error</string>
    <string name="home">Home</string>
    <string name="search_hint">Search Movies</string>
    <string name="Runtime">Runtime</string>
    <string name="Certification">Certification</string>
    <string name="rating">Rating</string>
    <string name="Download">Download</string>
    <string name="Trailer">Trailer</string>
    <string name="Share">Share</string>
    <string name="dailog_torrent">Choose a Quality</string>
    <string name="signed_in_fmt">Successfulyy Signed In</string>
    <string name="Favorites">Favorites</string>

    <string-array name="Spinner_Content">
        <item>All</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Film-Noir</item>
        <item>History</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Sport</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
</resources>
